Fix various spacing

--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     color: #2F2E41;
     color: var(--primary);
+    margin-top: 0;
     margin-bottom: 0.5rem;
 }
 
@@ -172,7 +173,11 @@ ol li {
     .header {
         justify-content: space-between;
         padding: 1.5625rem 2rem;
-        margin-bottom: 7.6875rem;
+        margin-bottom: 4.4375rem;
+    }
+
+    .home .header {
+        margin-bottom: 6.4375rem;
     }
 
     .main {
@@ -191,6 +196,7 @@ ol li {
 
     .intro {
         font-size: 20px;
+        margin-bottom: 2em;
     }
 
     .home-illustration {
